--- a/docs/.vuepress/theme/styles/override.styl
+++ b/docs/.vuepress/theme/styles/override.styl
@@ -13,6 +13,13 @@
         .introduce-p{
             font-size:24px;
         }
+        .action-button{
+            color:#333;
+        }
+        .action-button:hover {
+            text-decoration: none;
+            color:#fff;
+        }
     }
 
     /** 更新日志样式**/
